Fixed overflow gutter from right side

--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ body{
     align-items: center;
 }
 .container{
-    width: 100%;
-    width: 100%;
     padding-right: 16px;
     padding-left: 16px;
     margin-right: auto;
